--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">VIMDeeplinkAndroidExample</string>
 
+    <string name="activity_main_static">Static Helpers</string>
+    <string name="activity_main_dynamic">Dynamic Helpers</string>
     <string name="activity_main_instructions">Select the type of deep link you wish to perform. If you know a URI Path for the type of deep link you wish to perform, you may enter it. By leaving it blank, a default URI Path will be used. Hit the GO button once ready!</string>
     <string name="activity_main_go">GO!</string>
     <string name="activity_main_launch">Launch Vimeo</string>
@@ -8,7 +10,14 @@
     <string name="activity_main_select_error">Please choose a deep link type!</string>
     <string name="activity_main_uri_hint">URI Path</string>
     <string name="activity_main_type_category">Category</string>
+    <string name="activity_main_type_channel">Channel</string>
     <string name="activity_main_type_user">User</string>
     <string name="activity_main_type_video">Video</string>
+    <string name="activity_main_categories">Show Categories</string>
+    <string name="activity_main_explore">Show Explore</string>
+    <string name="activity_main_feed">Show Feed</string>
+    <string name="activity_main_me">Show My Profile</string>
+    <string name="activity_main_playlists">Show Playlists</string>
+    <string name="activity_main_upload">Show Upload</string>
     <string name="activity_main_deeplink_failure">Could not perform the following deep link!</string>
 </resources>
