add deeplink support for purchases, offline, watchlater

--- a/example/src/main/res/values/strings.xml
+++ b/example/src/main/res/values/strings.xml
@@ -20,5 +20,8 @@
     <string name="activity_main_me">Show My Profile</string>
     <string name="activity_main_playlists">Show Playlists</string>
     <string name="activity_main_upload">Show Upload</string>
+    <string name="activity_main_offline">Show Offline</string>
+    <string name="activity_main_watchlater">Show Watch Later</string>
+    <string name="activity_main_purchases">Show Purchases</string>
     <string name="activity_main_deeplink_failure">Could not perform the following deep link!</string>
 </resources>
